# codecrafters-sqlite-rust

./: Cargo.toml  README.md
src/: cli.rs  error.rs  lib.rs  macros.rs  main.rs  utils.rs
src/db/: cell.rs  file_header.rs  mod.rs  page.rs  schema_table.rs  table.rs  varint.rs
src/sql/: mod.rs  parsers.rs
