[package]
name = "codecrafters-sqlite"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
clap = { version = "4.5.28", features = ["derive"] }
nom = "8.0.0"
once_cell = "1.20.3"
paste = "1.0.15"
regex = "1.11.1"
thiserror = "2.0.11"
